# kamui

./: .coveragerc  .editorconfig  .gitignore  404.html  LICENSE  Pipfile  README.md  docker-compose.yml  index.html  mkdocs.yml  mypy.ini  pyproject.toml  pytest.ini  setup.cfg  setup.py  sitemap.xml
.github/: dependabot.yml
.github/workflows/: docs.yml  test.yml
create_stream_from_stream/: index.html
create_stream_from_topic/: index.html
docs/: create_stream_from_stream.md  create_stream_from_topic.md  index.md  project_details.md  projects.md  stream_details.md  streams.md
kamui/: application.py  boot.py
kamui-web/: .env  package.json
kamui-web/public/: index.html
kamui-web/src/: App.css  App.js  SiteWrapper.js  index.js  loadConfig.js
kamui-web/src/components/: customFormikField.js  reactSelectFormik.js  wizard.js
kamui-web/src/gateways/: Projects.js  Streams.js  Topics.js  axios.js
kamui-web/src/gateways/helpers/: UrlBuilder.js  retrieveEnvConfig.js
kamui-web/src/main/: reducers.js
kamui-web/src/pages/: index.js
kamui-web/src/pages/createNewStreamFromStream/: actionTypes.js  actions.js  createNewStreamFromStreamReducer.js  index.js
kamui-web/src/pages/createNewStreamFromTopic/: actionTypes.js  actions.js  createNewStreamFromTopicReducer.js  index.js
kamui-web/src/pages/createProject/: actionTypes.js  createProjectReducer.js  index.js
kamui-web/src/pages/create_new_stream_from_topic/: createNewStreamFromTopicReducer.js
kamui-web/src/pages/create_project/: actions.js
kamui-web/src/pages/projectDetails/: index.js  projectDetailsReducer.js
kamui-web/src/pages/project_details/: actionTypes.js  actions.js  index.js
kamui-web/src/pages/projects/: actionTypes.js  actions.js  index.js  projectsReducer.js
kamui-web/src/pages/streamDetails/: actionTypes.js  actions.js  index.js  streamDetailsReducer.js
kamui-web/src/pages/streams/: actionTypes.js  actions.js  index.js  streamsReducer.js
kamui/configuration/: database.py  dependency_injection.py
kamui/core/entity/: project.py  project_status.py  source.py  stream.py  topic.py  topic_schema.py
kamui/core/use_case/: failure.py
kamui/core/use_case/project/: __init__.py  create_new_project.py  get_project_details.py  get_projects_list.py
kamui/core/use_case/stream/: create_new_stream.py  get_ksql_streams.py  get_stream_by_name.py  get_stream_details.py  get_streams.py
kamui/core/use_case/topic/: __init__.py  get_available_topic_names.py  get_topic_schema.py
kamui/core/usecase/: failure.py
kamui/core/usecase/project/: __init__.py  create_new_project.py  get_project_details.py  get_projects_list.py
kamui/core/usecase/stream/: __init__.py  create_new_stream.py  create_new_stream_from_topic.py  get_ksql_streams.py  get_stream_by_name.py  get_stream_details.py  get_streams.py
kamui/core/usecase/topic/: __init__.py  get_available_topic_names.py  get_topic_schema.py
kamui/dataproviders/database/project/: __init__.py  model.py  repository.py
kamui/dataproviders/database/stream/: __init__.py  model.py  repository.py
kamui/dataproviders/database/stream_project/: model.py
kamui/dataproviders/rest/: __init__.py
kamui/dataproviders/rest/stream/: __init__.py  repository.py
kamui/dataproviders/rest/topic/: __init__.py  repository.py
kamui/entrypoints/rest/: helpers.py
kamui/entrypoints/rest/health/: __init__.py  get_health_status.py
kamui/entrypoints/rest/project/: __init__.py  create_new_project.py  (+2 more)
project_details/: index.html
projects/: index.html
search/: search_index.json
stream_details/: index.html
streams/: index.html
tests/: conftest.py
(+51 files in other folders)
