[tool.poetry]
name = "kamui"
version = "0.0.1"
description = "Tool to make easy streams creation on KSQL"
authors = ["Pablo Aguilar <pablo.aguilar@fatec.sp.gov.br>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/thepabloaguilar/kamui"
repository = "https://github.com/thepabloaguilar/kamui"
keywords = [
    "ksql",
    "kafka",
    "stream"
]
classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: Education",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: Unix",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: System :: Systems Administration",
    "Topic :: Software Development :: User Interfaces",
    "Topic :: Scientific/Engineering"
]

[tool.poetry.dependencies]
python = "^3.7"

flask = "^1.1.2"
flask-restful = "^0.3.8"
punq = "^0.4.1"
sqlalchemy = "^1.3.16"
psycopg2-binary = "^2.8.5"
httpx = "^0.12.1"
orjson = "^2.6.6"
dataclasses-json = "^0.4.2"
flask-cors = "^3.0.8"
returns = "^0.14.0"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
flake8 = "^3.7.9"
mypy = "^0.770"
pytest = "^5.4.1"
pytest-cov = "^2.8.1"

[tool.black]
line-length = 88
target-version = ['py37', 'py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

