[tool.poetry]
name = "kamui"
version = "0.0.1"
description = "Tool to make easy streams creation on KSQL"
authors = ["Pablo Aguilar <pablo.aguilar@fatec.sp.gov.br>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/thepabloaguilar/kamui"
repository = "https://github.com/thepabloaguilar/kamui"
documentation = "https://thepabloaguilar.github.io/kamui/"
keywords = [
    "ksql",
    "kafka",
    "stream"
]
classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: Education",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: Unix",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: System :: Systems Administration",
    "Topic :: Software Development :: User Interfaces",
    "Topic :: Scientific/Engineering"
]

[tool.poetry.dependencies]
python = "^3.7"

flask = "^1.1.2"
flask-restful = "^0.3.8"
punq = "^0.4.1"
sqlalchemy = "^1.3.20"
psycopg2-binary = "^2.8.6"
httpx = "^0.13.3"
orjson = "^3.4.1"
flask-cors = "^3.0.9"
returns = "^0.14.0"
pydantic = "^1.6.1"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
flake8 = "^3.8.4"
mypy = "^0.910"
pytest = "^6.1.2"
pytest-cov = "^2.10.1"

mkdocs = "^1.1.2"
mkdocs-material = "^6.1.0"
mkdocs-minify-plugin = "^0.3.0"
mkdocs-git-revision-date-plugin = "^0.3"

[tool.black]
line-length = 88
target-version = ['py37', 'py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

